--- a/gb/16/11/24/n8523707.md
+++ b/gb/16/11/24/n8523707.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/idnybm3802/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/idnybm3802/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/idnybm3802/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/idnybm3802/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/idnybm3802/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/idnybm3802/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/idnybm3802/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/idnybm3802/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/idnybm3802/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/idnybm3802/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/idnybm3802/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/idnybm3802/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/idnybm3802/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/idnybm3802/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/idnybm3802/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/idnybm3802/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/idnybm3802/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/idnybm3802/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/idnybm3802/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/idnybm3802/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/idnybm3802/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/idnybm3802/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/idnybm3802/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/idnybm3802/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>报告：卑诗人看专科要等25周</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/e979128d0767b6a2ee4697c20daa799f-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2016年11月24日讯】最新研究发现，<ahref="https://github.com/idnybm3802/djy/blob/master/gb/tag/%E5%8D%91%E8%AF%97.md#1">卑诗</a>人现在的医疗<ahref="https://github.com/idnybm3802/djy/blob/master/gb/tag/%E7%AD%89%E5%BE%85%E6%97%B6%E9%97%B4.md#1">等待时间</a>创历史纪录，平均为25.2星期。</p>
+	<p>【大纪元2016年11月24日讯】最新研究发现，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8D%91%E8%AF%97.md#1">卑诗</a>人现在的医疗<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%AD%89%E5%BE%85%E6%97%B6%E9%97%B4.md#1">等待时间</a>创历史纪录，平均为25.2星期。</p>
 <div id="contentsContainer">
 <div id="contents">
-<p id="E113" class="qowt-stl-正文"><span id="E114" class="qowt-font4">据CTV报导，<ahref="https://github.com/idnybm3802/djy/blob/master/gb/tag/%E8%8F%B2%E8%8E%8E%E7%A0%94%E7%A9%B6%E9%99%A2.md#1">菲莎研究院</a>的一份调查报告发现，自去年以来，<ahref="https://github.com/idnybm3802/djy/blob/master/gb/tag/%E5%8D%91%E8%AF%97.md#1">卑诗</a>人等待必要治疗的时间再次加长。报告对<ahref="https://github.com/idnybm3802/djy/blob/master/gb/tag/%E4%B8%93%E7%A7%91.md#1">专科</a>医生进行调查，发现病人从医师推荐，到接受专家医诊的平均<ahref="https://github.com/idnybm3802/djy/blob/master/gb/tag/%E7%AD%89%E5%BE%85%E6%97%B6%E9%97%B4.md#1">等待时间</a>，居然超过20星期。</span></p>
-<p id="E115" class="qowt-stl-正文"><span id="E116" class="qowt-font4">卑诗人等待治病的时间，看起来是一年不如一年，今年的25.2星期不仅比去年的18.3星期等待时间要长得多，更是1993年9.3星期的两倍多。<ahref="https://github.com/idnybm3802/djy/blob/master/gb/tag/%E8%8F%B2%E8%8E%8E%E7%A0%94%E7%A9%B6%E9%99%A2.md#1">菲莎研究院</a>自1993年开始跟踪调查该数据，今年调查覆盖了10个省分与12个医疗领域。</span></p>
+<p id="E113" class="qowt-stl-正文"><span id="E114" class="qowt-font4">据CTV报导，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%8F%B2%E8%8E%8E%E7%A0%94%E7%A9%B6%E9%99%A2.md#1">菲莎研究院</a>的一份调查报告发现，自去年以来，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8D%91%E8%AF%97.md#1">卑诗</a>人等待必要治疗的时间再次加长。报告对<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%93%E7%A7%91.md#1">专科</a>医生进行调查，发现病人从医师推荐，到接受专家医诊的平均<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%AD%89%E5%BE%85%E6%97%B6%E9%97%B4.md#1">等待时间</a>，居然超过20星期。</span></p>
+<p id="E115" class="qowt-stl-正文"><span id="E116" class="qowt-font4">卑诗人等待治病的时间，看起来是一年不如一年，今年的25.2星期不仅比去年的18.3星期等待时间要长得多，更是1993年9.3星期的两倍多。<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%8F%B2%E8%8E%8E%E7%A0%94%E7%A9%B6%E9%99%A2.md#1">菲莎研究院</a>自1993年开始跟踪调查该数据，今年调查覆盖了10个省分与12个医疗领域。</span></p>
 <p id="E117" class="qowt-stl-正文"><span id="E118" class="qowt-font4">加拿大所有省分中，New Brunswick的2016年医疗等待时间最长，为38.8星期；安省等待时间最短，仅15.6星期。比卑诗省情况要好的其他省分还有，亚省22.9星期，曼尼托巴20.6星期，魁北克为18.9星期，萨省为16.6星期。</span></p>
-<p id="E119" class="qowt-stl-正文"><span id="E120" class="qowt-font4">不同的<ahref="https://github.com/idnybm3802/djy/blob/master/gb/tag/%E4%B8%93%E7%A7%91.md#1">专科</a>，等待时间也不同。例如神经外科专家的等待时间为46.9星期，而肿瘤科专家只需要3.7星期。</span></p>
+<p id="E119" class="qowt-stl-正文"><span id="E120" class="qowt-font4">不同的<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%93%E7%A7%91.md#1">专科</a>，等待时间也不同。例如神经外科专家的等待时间为46.9星期，而肿瘤科专家只需要3.7星期。</span></p>
 <p id="E121" class="qowt-stl-正文"><span id="E122" class="qowt-font4">菲莎研究院估计，全国的加拿大人正在等待97.35万个治疗过程。报告认</span>为，如此冗长的等待，不仅带来麻烦，也导致病人“疼痛、承受与精神苦恼，甚至健康状况恶化，促使一些病症，转化为慢性、不可治或永久性残疾。”</p>
 </div>
 </div>
@@ -28,42 +28,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/12/11/6/n3723084.md#1">明年加拿大父母团聚移民名额达2.5万</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/13/1/16/n3778073.md#1">医疗消费排名 魁省居首纽芬兰垫底</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/13/2/7/n3796282.md#1">揭露中共活摘器官黑幕 加拿大国会举办听证</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/13/4/28/n3857298.md#1">卑过半选民视医疗为第二大问题  　</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/12/11/6/n3723084.md#1">明年加拿大父母团聚移民名额达2.5万</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/1/16/n3778073.md#1">医疗消费排名 魁省居首纽芬兰垫底</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/2/7/n3796282.md#1">揭露中共活摘器官黑幕 加拿大国会举办听证</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/4/28/n3857298.md#1">卑过半选民视医疗为第二大问题  　</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/14/n10393987.md#1" target="_blank">林辉：掩盖大饥荒真相 五省书记罪责难逃（上）</a></li><li><a href="https://github.com/idnybm3802/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/26/n10875809.md#1" target="_blank">曝光610文件 宗教权威人谴中共打压法轮功</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/30/n11290434.md#1" target="_blank">【征文】爱德华：金门战役共军惨败之迷</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/18/n11597772.md#1" target="_blank">法国解放报：法国应该承诺反对强摘器官</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/17/n12626693.md#1">冬至“开运”民俗有哪些？</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/22/n12638393.md#1">不丹王太后梦前世 故地重游感轮回</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/10/3/n12449869.md#1">《圣经》与《推背图》预言的应验与变换10</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/22/n12637081.md#1">【十字路口】变种病毒攻陷多国 全球疫情海啸</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/23/n12640899.md#1">敲敲大脑防失智！中医这样做健脑 告别记忆力衰退</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/23/n12640761.md#1">【新闻大家谈】恐怖乌托邦 旧文泄终极目的？</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/22/n12638534.md#1">北上广深罕见停电 专家析原因可能惊人</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/22/n12638349.md#1">大陆疫苗开打分两步 张文宏：让领导干部先打</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/22/n12638836.md#1">沈舟：美舰闯南沙强烈回应中共航母出动</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/21/n12636257.md#1">典礼座位名字被写成孙莉 孙俪一句话化解尴尬</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/20/n12634288.md#1">赵薇罕见用灰色形容爱情 被疑与黄有龙婚变</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/22/n12638646.md#1">黄晓明暴瘦10公斤 一日菜单吓坏网友</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/21/n12636775.md#1">董璇回应假腿争议 摆一字马还写打油诗</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/21/n12636474.md#1">自曝从不用智慧型手机 大导演诺兰解释原因</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/22/n12637180.md#1">巴西流浪汉理发变型男 被家人认出得以团聚</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/22/n12637662.md#1">濒死男子到另一个世界 获知生命的意义</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/20/n12634295.md#1">冬至补一天 身体变好一年 中医推荐6种天然补药</a></li>
-<li><a href="https://github.com/idnybm3802/djy/blob/master/gb/20/12/23/n12639398.md#1">4岁女童讲述前世记忆 吓坏妈妈</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/idnybm3802/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/idnybm3802/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/24/n8523707.htm">报告：卑诗人看专科要等25周</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/24/n8523707.htm">报告：卑诗人看专科要等25周</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/idnybm3802/djy/blob/master/gb/16/11/24/n8523707.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/idnybm3802/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/idnybm3802/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/idnybm3802/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/idnybm3802/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idnybm3802/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/16/11/24/n8523707.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
